Do not hide parts from Colorcard, some changes from shopify backend

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,12 @@
-$font-avantgarde-eot-path: "./font-avantgarde-book.eot" !default;
-$font-avantgarde-woff-path: "./font-avantgarde-book.woff" !default;
-$font-avantgarde-ttf-path: "./font-avantgarde-book.ttf" !default;
-$font-avantgarde-svg-path: "./font-avantgarde-book.svg" !default;
+$font-gt-walsheim-eot-path: "./GT-Walsheim-Light.eot" !default;
+$font-gt-walsheim-woff-path: "./GT-Walsheim-Light.woff" !default;
+$font-gt-walsheim-ttf-path: "./GT-Walsheim-Light.ttf" !default;
+$font-gt-walsheim-otf-path: "./GT-Walsheim-Light.otf" !default;
 
-$font-avantgarde-bold-eot-path: "./font-avantgarde-book-bold.eot" !default;
-$font-avantgarde-bold-woff-path: "./font-avantgarde-book-bold.woff" !default;
-$font-avantgarde-bold-ttf-path: "./font-avantgarde-book-bold.ttf" !default;
-$font-avantgarde-bold-svg-path: "./font-avantgarde-book-bold.svg" !default;
-
+$font-gt-walsheim-bold-eot-path: "./GT-Walsheim-Bold.eot" !default;
+$font-gt-walsheim-bold-woff-path: "./GT-Walsheim-Bold.woff" !default;
+$font-gt-walsheim-bold-ttf-path: "./GT-Walsheim-Bold.ttf" !default;
+$font-gt-walsheim-bold-otf-path: "./GT-Walsheim-Bold.otf" !default;
 
 $iconset-arrow-l-url: '';
 $iconset-arrow-r-url: '';
