--- a/theme/snippets/tpl-jumplink-product.liquid
+++ b/theme/snippets/tpl-jumplink-product.liquid
@@ -33,7 +33,8 @@
   Select your Order
 </p>
 <div class="mb-2" data-toggle="colorcard" rv-data-product-handle="product.handle" rv-data-image="product.images | array_last">
-  {% include 'jumplink-iconset', name: 'arrow', direction: 'right', color: 'black' %} Show Color Card
+  {% include 'jumplink-iconset', name: 'arrow', direction: 'right', color: 'black' %}
+  <span class="label">Show Color Card</span>
 </div>
 
 <p rv-html="product.description" class="rte">
