--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -24,8 +24,13 @@
     }
 }
 
-[data-colorcard="placeholder"],
+[data-colorcard="placeholder"] {
+    background-image: none !important;
+}
 [data-colorcard="placed"] {
-    background-size: cover;
-    background-position: center center;
+    background-size: contain;
+    background-position: top center;
+    background-repeat: no-repeat;
+    margin-left: -9px;
+    margin-right: -9px;
 }
