--- a/theme/snippets/tpl-jumplink-product.liquid
+++ b/theme/snippets/tpl-jumplink-product.liquid
@@ -44,7 +44,7 @@
   Prepents via Shopify Product.js
 {% endcomment %}
 <div class="pt-1">
-  <product-variant-dropdowns product="product" show-quantity-button="true" start-quantity=10 dropdown-button-class="'w-100'" class="product-variants d-flex justify-content-between align-items-stretch flex-row"></product-variant-selectors>
+  <product-variant-dropdowns product="product" show-quantity-button="true" start-quantity="1" min-quantity="0" decrease-quantity="1" increase-quantity="1" dropdown-button-class="'w-100'" class="product-variants d-flex justify-content-between align-items-stretch flex-row"></product-variant-selectors>
 </div>
 
 <product-b2b-button product="product"></product-b2b-button>
