--- a/src/scss/_product.scss
+++ b/src/scss/_product.scss
@@ -34,3 +34,10 @@
     margin-left: -9px;
     margin-right: -9px;
 }
+
+[data-toggle="colorcard"] {
+    &[disabled] {
+        opacity: 0.2;
+        pointer-events: none; // Prevent js click event
+    }
+}
