--- a/theme/assets/theme.scss.liquid
+++ b/theme/assets/theme.scss.liquid
@@ -12220,6 +12220,13 @@ h1,
     margin-left: -9px;
     margin-right: -9px;
 }
+
+[data-toggle="colorcard"] {
+    &[disabled] {
+        opacity: 0.2;
+        pointer-events: none; // Prevent js click event
+    }
+}
 [data-namespace="cart"] {
   .cart-price {
     @extend .product-price;
