--- a/theme/snippets/tpl-jumplink-product-images-slick.liquid
+++ b/theme/snippets/tpl-jumplink-product-images-slick.liquid
@@ -5,7 +5,7 @@
 
   <div rv-if="showThums" rv-class="thumColClass">
     <div class="mb-1">
-      <div class="product-images-arrows d-flex justify-content-between">
+      <div class="product-images-arrows d-flex justify-content-between" rv-hide="product.images | size | lt 2">
         {% comment %}
           @see https://github.com/kenwheeler/slick#methods
         {% endcomment %}
@@ -19,7 +19,7 @@
     </div>
 
     <div rv-id="slickThumsID">
-      <div rv-each-image="product.images" rv-hide="product.images | last %image%" rv-data-index="%image%" class="thumb mb-1">
+      <div rv-each-image="product.images" rv-data-index="%image%" class="thumb mb-1">
         <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
       </div>
     </div>
@@ -30,7 +30,7 @@
 
     <div class="product-photo-carousel" rv-id="slickID" data-toggle="modal-no-touch" data-backdrop="false" data-target="#product-photo-modal-{{product.handle}}">
 
-      <a rv-each-image="product.images" rv-hide="product.images | last %image%" class="product-photo-carousel-item">
+      <a rv-each-image="product.images" class="product-photo-carousel-item">
         <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
       </a>
 
@@ -41,10 +41,10 @@
 {% comment %}
   Modal
 {% endcomment %}
-{% comment %}
+
 {% include 'jumplink-product-photo-modal' %}
-{% endcomment %}
+
 
 <div class="preloaded-images">
-  <img src="{{ product.images.last.src | img_url: "master" }}" width="1" height="1" alt="Last Product Image" />
+  <img src="{{ product.images.last.src | img_url: 'master' }}" width="1" height="1" alt="Last Product Image" />
 </div>
