--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -34,7 +34,7 @@
           
           <div class="product-photos col-xs-12 col-md-4 offset-md-4 col-lg-5 offset-lg-3 mb-1">
             {% comment %}{% include 'jumplink-product-photo-carousel' %}{% endcomment %}
-            <product-images-slick product="product" show-thums="true" wait-for-b2bcart="false" with-fullscreen-modal="true"></product-images-slick>
+            <product-images-slick product="product" show-thums="true" in-b2bcart="false" with-fullscreen-modal="true" has-parent-modal="false"></product-images-slick>
           </div>
           
           <div class="product-details col-xs-12 col-md-4">
