--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -81,6 +81,7 @@
         data-product-metafields-custom-fields-json-string='{{product.metafields.c_f | json | replace: "'", "&#39;"}}'
         data-product-metafields-spr-json-string='{{product.metafields.spr | json | replace: "'", "&#39;"}}'
         data-product-image-last='{{ product.images.last.src | img_url: "master" }}'
+        data-product-placeholder-image='{{ "no-image.png" | asset_url }}'
 
         {% if collection.previous_product %}
           data-product-prev-url="{{collection.previous_product}}"
