--- a/theme/snippets/jumplink-product-grid-item.liquid
+++ b/theme/snippets/jumplink-product-grid-item.liquid
@@ -1,7 +1,12 @@
 {% comment %}
+  Set ratio
+{% endcomment %}
+{% include 'jumplink-logic-aspect-ratio', default_ratio: settings.products_aspect_ratio %}
+
+{% comment %}
   Is the current product unlocked?
 {% endcomment %}
-{% include 'app-jumplink-ec-product-unlocked' %}
+{% include 'app-jumplink-ec-logic-product-unlocked' %}
 
 {% if unlocked %}
   {% assign on_sale = false %}
@@ -21,50 +26,50 @@
             {% if featured_image_src == hover_image_src %}
               {% assign hover_image_src = product.images[0] | product_img_url: 'grande' %}
             {% endif %}
-            <div class="background-box {{ settings.products_aspect_ratio }}" style="background-image: url({{ featured_image_src }});" data-image-featured-src="{{ featured_image_src }}" data-image-hover-src="{{ hover_image_src }}" title="{{ product.featured_image.alt | escape }}"></div>
+            <div class="background-box background-size-{{ background_size }} {{ ratio }}" style="background-image: url({{ featured_image_src }});" data-image-featured-src="{{ featured_image_src }}" data-image-hover-src="{{ hover_image_src }}" title="{{ product.featured_image.alt | escape }}"></div>
           {% else %}
-            <div class="background-box {{ settings.products_aspect_ratio }}" style="background-image: url({{ featured_image_src }});" title="{{ product.featured_image.alt | escape }}"></div>
+            <div class="background-box background-size-{{ background_size }} {{ ratio }}" style="background-image: url({{ featured_image_src }});" title="{{ product.featured_image.alt | escape }}"></div>
           {% endif %}
         {% else %}
-          <div class="background-box {{ settings.products_aspect_ratio }}" style="background-image: url({{ 'no-image.png' | asset_url }});" title="{{ product.featured_image.alt | escape }}"></div>
+          <div class="background-box background-size-{{ background_size }} {{ ratio }}" style="background-image: url({{ 'no-image.png' | asset_url }});" title="{{ product.featured_image.alt | escape }}"></div>
         {% endif %}
         <div class="caption">
-            {% if settings.products_show_vendor %}
-              <p class="vendor text-nowrap">
-                {{ product.vendor }}
-              </p>
-            {% endif %}
-            
-            {% if settings.products_show_title %}
-              <p class="title text-nowrap">
-                {{ product.title }}
-              </p>
-            {% endif %}
+          {% if settings.products_show_vendor %}
+            <p class="vendor text-nowrap">
+              {{ product.vendor }}
+            </p>
+          {% endif %}
+          
+          {% if settings.products_show_title %}
+            <p class="title text-nowrap">
+              {{ product.title }}
+            </p>
+          {% endif %}
 
-            {% if settings.products_show_price %}
-              <p class="price text-nowrap">
-                {% assign price = product.price %}
-                {% if on_sale %}
-                  <span class="text-danger text-nowrap">
-                    {% include 'jumplink-get-price' with price %}
-                  </span>
-                  {% assign price = product.compare_at_price %}
-                <span>
-                  <s class="compare-at-price text-nowrap">
-                    {% include 'jumplink-get-price' with price %}
-                  </s>
-                </span>
-                {% else %}
+          {% if settings.products_show_price %}
+            <p class="price text-nowrap">
+              {% assign price = product.price %}
+              {% if on_sale %}
+                <span class="text-danger text-nowrap">
                   {% include 'jumplink-get-price' with price %}
-                {% endif %}
-              </p>
-            {% endif %}
+                </span>
+                {% assign price = product.compare_at_price %}
+              <span>
+                <s class="compare-at-price text-nowrap">
+                  {% include 'jumplink-get-price' with price %}
+                </s>
+              </span>
+              {% else %}
+                {% include 'jumplink-get-price' with price %}
+              {% endif %}
+            </p>
+          {% endif %}
 
-            {% comment %}
-              All themes by Shopify should support the Product Reviews app out of the box.
-              https://apps.shopify.com/product-reviews
-            {% endcomment %}
-            <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
+          {% comment %}
+            All themes by Shopify should support the Product Reviews app out of the box.
+            https://apps.shopify.com/product-reviews
+          {% endcomment %}
+          <span class="shopify-product-reviews-badge" data-id="{{ product.id }}"></span>
         </div>
       </a>
     </div>
