--- a/theme/snippets/tpl-jumplink-product-images-slick.liquid
+++ b/theme/snippets/tpl-jumplink-product-images-slick.liquid
@@ -20,7 +20,7 @@
 
     <div rv-id="slickThumsID">
       <div rv-each-image="product.images" rv-data-index="%image%" class="thumb mb-1">
-        <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
+        <div rv-class="backgroundClass" rv-background-image="image" rv-title="product.title"></div>
       </div>
     </div>
 
@@ -30,7 +30,7 @@
     <div class="product-photo-carousel" rv-id="slickID" data-toggle="modal-no-touch" data-backdrop="false" rv-data-target="modalSelector">
 
       <a rv-each-image="product.images" class="product-photo-carousel-item">
-        <div class="background-box {{settings.products_aspect_ratio}}" rv-background-image="image" rv-title="product.title"></div>
+        <div rv-class="backgroundClass" rv-background-image="image" rv-title="product.title"></div>
       </a>
 
     </div>
