--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -1,7 +1,19 @@
 {% comment %}
+  Do we have a collection that has the same name as our product vendor name?
+  If we do, let's have the vendor link point to it.
+  If not, we will point to the automatic vendor collection.
+{% endcomment %}
+{% assign product_vendor_handle = product.vendor | handle %}
+{% if collections[product_vendor_handle].handle == product_vendor_handle %}
+  {% assign vendor_url = collections[product_vendor_handle].url %}
+{% else %}
+  {% assign vendor_url = product.vendor | url_for_vendor %}
+{% endif %}
+
+{% comment %}
   Is the current product unlocked?
 {% endcomment %}
-{% include 'app-jumplink-ec-product-unlocked' %}
+{% include 'app-jumplink-ec-logic-product-unlocked' %}
 
 {% if unlocked %}
   {% include 'jumplink-breadcrumbs-slide-buttons' %}
@@ -33,22 +45,14 @@
           </div>
           
           <div class="product-photos col-xs-12 col-md-4 offset-md-4 col-lg-5 offset-lg-3 mb-1">
-            {% comment %}{% include 'jumplink-product-photo-carousel' %}{% endcomment %}
-            <product-images-slick product="product" show-thums="true" in-b2bcart="false" with-fullscreen-modal="true" has-parent-modal="false"></product-images-slick>
+            {% comment %}
+              Set ratio
+            {% endcomment %}
+            {% include 'jumplink-logic-aspect-ratio', default_ratio: settings.products_aspect_ratio %}
+            <product-images-slick product="product" show-thums="true" in-b2bcart="false" with-fullscreen-modal="true" has-parent-modal="false" background-class="'background-box background-size-{{ background_size }} {{ ratio }}'"></product-images-slick>
           </div>
           
           <div class="product-details col-xs-12 col-md-4">
-            {% comment %}
-              Do we have a collection that has the same name as our product vendor name?
-              If we do, let's have the vendor link point to it.
-              If not, we will point to the automatic vendor collection.
-            {% endcomment %}
-            {% assign product_vendor_handle = product.vendor | handle %}
-            {% if collections[product_vendor_handle].handle == product_vendor_handle %}
-              {% assign vendor_url = collections[product_vendor_handle].url %}
-            {% else %}
-              {% assign vendor_url = product.vendor | url_for_vendor %}
-            {% endif %}
             <product product="product" vendor-url="'{{ vendor_url }}'"></product>
           </div>
         
