--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -40,14 +40,13 @@
     https://help.shopify.com/manual/reports-and-analytics/google-analytics#remove-duplicate-scripts
     https://help.shopify.com/manual/reports-and-analytics/google-analytics/google-analytics-setup#upgrade-ga%22
   {% endcomment %}
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <script src='https://www.google-analytics.com/analytics.js'></script>
 
   <script src="{{'libs.js' | asset_url}}"></script>
   <script src="{{'shopify_common.js'  | shopify_asset_url}}"></script>
   <script src="{{'customer_area.js'  | shopify_asset_url}}"></script>
   <script src="{{'api.jquery.js'  | shopify_asset_url}}"></script>
-  <script src="{{'option_selection.js'  | asset_url}}"></script>
- 
+  <script src="{{'option_selection.js'  | asset_url}}"></script> 
 
   <script>
     if(typeof(videojs) !== 'undefined' && typeof(videojs.options) !== 'undefined' && typeof(videojs.options.flash) !== 'undefined' ) {
