--- a/theme/snippets/tpl-jumplink-product-photo-modal.liquid
+++ b/theme/snippets/tpl-jumplink-product-photo-modal.liquid
@@ -18,7 +18,7 @@
                 </div>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    {% include 'jumplink-iconset', name: 'x', color: 'white' %}
+                    {% include 'jumplink-iconset', name: 'x', color: 'stroke-white' %}
                 </button>
                 
             </div>
