--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -41,11 +41,11 @@
     }
 }
 
-.bg-black {
-    .btn-outline-secondary {
-        &:hover {
-            background-color: $btn-secondary-bg;
-            color: $black;
-        }
-    }
-}
+// .bg-black {
+//     .btn-outline-secondary {
+//         &:hover {
+//             background-color: $btn-secondary-bg;
+//             color: $black;
+//         }
+//     }
+// }
