--- a/theme/snippets/jumplink-sidebar-right.liquid
+++ b/theme/snippets/jumplink-sidebar-right.liquid
@@ -1,7 +1,7 @@
 {% comment %}
     @see http://dcdeiv.github.io/simpler-sidebar/ 
 {% endcomment %}
-<div id="right-sidebar" class="right-sidebar hidden-print">
+<div id="right-sidebar" class="right-sidebar hidden-print bg-white">
     <div id="sidebar-wrapper" class="sidebar-wrapper">  
         <div class="list-group">
             {% for link in linklists.main-menu.links %}
