--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
     // overflow-wrap: break-word;
     // word-wrap: break-word;
