--- a/theme/snippets/jumplink-navbar.liquid
+++ b/theme/snippets/jumplink-navbar.liquid
@@ -1,64 +1,55 @@
-<nav class="navbar fixed-top navbar-toggleable-md navbar-light bg-white border-b border-px-1 border-color-gray-lighter" id="main-navbar">
-
-  <button class="navbar-toggler navbar-toggler-right sidebar-toggler tcon tcon-menu--xcross hidden-print" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
-    <span class="tcon-menu__lines" aria-hidden="true"></span>
-    <span class="tcon-visuallyhidden">toggle menu</span>
-  </button>
-
-  <div class="container">
-
-    <a class="navbar-brand" href="/">
-      <img class="img-fluid" src="{{ 'navbar_logo.png' | asset_url }}" width="300" height="30" alt="STUDIO PEZZETTA">
-    </a>
-    
-    <div class="w-100 hidden-print">
-      <ul class="hidden-md-down navbar-nav d-flex justify-content-end">
-        {% for link in linklists.main-menu.links %}
-          {% assign has_sub_menu = false %}
-          {% assign has_sub_categories = false %}
-          {% assign child_list_handle = link.title | handle %}
-          {% if linklists[child_list_handle] and linklists[child_list_handle].links.size > 0 %}
-            {% assign has_sub_menu = true %}
-          {% elsif link.type == 'collection_link' and link.object.all_tags.size > 0 and sub_categories_over_tags_is_off_now %}
-            {% assign has_sub_categories = true %}
-          {% endif %}
-          {% if has_sub_menu or has_sub_categories %}
-              {% comment %}
-              You could also use {% include 'jumplink-navbar-dropdown-letters' %} or {% include 'jumplink-navbar-dropdown-designer' %}
-              {% endcomment %}
-              {% include 'jumplink-navbar-dropdown' %}
-          {% else %}
-            {% if link.handle == 'blog' and settings.blog_enable == false %}
-            {% else %}
-              <li class="nav-item level-1 {{link.handle}}">
-                <a class="nav-link" href="{{ link.url }}">{{ link.title }}</a>
-              </li>
-            {% endif %}
-          {% endif %}
-        {% endfor %}
-      </ul>
-
-      {% if settings.navbar_show_cart %}
-        <ul class="navbar-nav">
-          {% include 'jumplink-navbar-dropdown-cart' %}
-        </ul>
-      {% endif %}
-
-      {% if settings.navbar_show_search %}
-        <form action="/search" method="get" class="search-form navbar-form" role="search">
-          <div class="input-group">
-            <span class="input-group-btn">
-              <button id="search-submit" class="btn btn-default ah-navbar-btn-icon" type="submit">
-                <div class="font-icon">
-                  <img src="{{ 'search.svg' | asset_url }}" />
-                </div>
-              </button>
-            </span>
-            <input name="q" type="search" id="search-field" class="form-control" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}">
+<nav class="navbar fixed-top navbar-light bg-transparent pt-4 container-fluid" id="main-navbar">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="d-flex flex-nowrap justify-content-between">
+          <div class="align-self-start">
+            <div class="navbar-toggler border-px-0">
+              <div class="morphext">
+                Shortcut
+              </div>
+            </div>
           </div>
-        </form>
-      {% endif %}
+        
+          <div class="align-self-center">
+            {% comment %} <img class="hidden-xs-up" src="{{ 'navbar_logo.svg' | asset_url }}" width="auto" height="16px" alt="Art💚Code Studio"> {% endcomment %}
+            <a href="/" class="brand-01">
+              <div class="font-weight-bold brand-text">Art</div>
+              <img class="brand-image" src="{{ 'icon_heart_px.png' | asset_url }}" alt="Art💚Code Studio">
+              <div class="font-weight-bold brand-text">Code</div>
+              <div class="font-weight-normal brand-text">&nbsp;Studio</div>
+            </a>
+          </div>
 
+          {% if settings.navbar_show_cart %}
+            <ul class="navbar-nav">
+              {% include 'jumplink-navbar-dropdown-cart' %}
+            </ul>
+          {% endif %}
+
+          {% if settings.navbar_show_search %}
+            <form action="/search" method="get" class="search-form navbar-form" role="search">
+              <div class="input-group">
+                <span class="input-group-btn">
+                  <button id="search-submit" class="btn btn-default ah-navbar-btn-icon" type="submit">
+                    <div class="font-icon">
+                      <img src="{{ 'search.svg' | asset_url }}" />
+                    </div>
+                  </button>
+                </span>
+                <input name="q" type="search" id="search-field" class="form-control" placeholder="{{ 'navbar.shop_actions.search' | t }}" value="{{ search.terms | escape }}">
+              </div>
+            </form>
+          {% endif %}
+
+          <div class="align-self-end">
+            <button class="navbar-toggler sidebar-toggler hidden-print border-px-0" type="button" data-toggle="sidebar" data-target="#right-sidebar" aria-controls="right-sidebar" aria-expanded="false" aria-label="Toggle Sidebar">
+              <div class="morphext">
+                <span class="animated open">Close</span>
+                <span class="animated closed">Menu</span>
+              </div>
+            </button>
+          </div>
+        </div>
     </div>
   </div>
 </nav>
