[page] play tetris :sparkles: [basic] buttons

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,5 +1,6 @@
 .btn {
     text-transform: uppercase;
+    font-size: 0.7rem;
     cursor: pointer;
     &:focus {
         box-shadow: none !important;
