added touch gestures to play tetris on smartphones

--- a/theme/templates/page.tetris.liquid
+++ b/theme/templates/page.tetris.liquid
@@ -25,7 +25,7 @@
             <p class="m-0">Rows <span id="rows" class="text-info font-weight-bold">0</span></p>
           </div>
         </div>
-        <canvas id="canvas">
+        <canvas id="canvas" data-xthreshold="20" data-ythreshold="20">
           Sorry, this example cannot be run because your browser does not support the &lt;canvas&gt; element
         </canvas>
       </div>
